fix bug overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,12 @@ body {
     text-align: center;
 }
 
-.px_2{
+.px_2 {
     padding-bottom: 1rem;
+}
+
+.p_0 {
+    padding: 0;
 }
 
 /* flex */
@@ -75,13 +79,13 @@ main {
     padding: 1rem 15px;
     position: sticky;
     top: 0;
-    background-color: rgba(0, 0, 0, 0.201);
+    background-color: rgba(20, 11, 11, 0.449);
     z-index: 1000;
 }
 
 .btn {
     color: var(--sw-white);
-    background-color: rgba(20, 11, 11, 0.201);
+    background-color: rgba(20, 11, 11, 0.449);
     border: 1px solid var(--sw-white);
     padding: .7rem 3rem;
     border-radius: 30px;
@@ -90,50 +94,74 @@ main {
     transition: .3s;
 }
 
-.btn:hover{
+.btn:hover {
     scale: 1.1;
 }
 
-main>.container {
+main {
     overflow: auto;
     width: 100%;
-    height: calc(100vh - 90px - 74.38px);
+    height: calc(100vh - 90px);
 }
 
 main img {
     width: 100%;
 }
 
-main h2{
+main h2 {
     padding: 1rem;
 }
 
 main h4,
-main h2{
+main h2 {
     color: var(--sw-white);
 }
 
 main h2+div,
-main h4+div{
+main h4+div {
     color: var(--sw-dark-soft);
 }
 
-main h2+div{
+main h2+div {
     padding-left: 1rem;
+    padding-bottom: 1rem;
 }
 
-main h4+div{
+main h4+div {
     padding-top: .5rem;
 }
 
-main h4{
+main h4 {
     padding-top: 1rem;
 }
 
-.square{
-    background-color: rgba(20, 11, 11, 0.201);
+.card {
+    position: relative;
+}
+
+.square {
+    background-color: rgba(0, 0, 0, 0.351);
     height: 100%;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.square>.fa-regular {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 4rem;
+}
+
+.square {
+    display: none;
+}
+
+.card:hover .square {
+    display: block;
 }
 
 /* #menu */
@@ -152,19 +180,25 @@ main h4{
     transition: .3s;
 }
 
-#menu a:hover{
+#menu a:hover {
     color: var(--sw-white);
 }
 
-.underline{
+.underline {
     width: 50%;
     margin: auto;
     padding-top: 5px;
     border-bottom: 2px solid var(--sw-success);
 }
 
+/* #prova_underline{
+    border-bottom: 2px solid var(--sw-success);
+    border-bottom-style
+} */
+
 /* popular_artists */
-#popular_artists img {
+#popular_artists img,
+#popular_artists .square {
     border-radius: 50%;
 }
 
@@ -242,6 +276,10 @@ main h4{
 }
 
 .debug #page_bottom {
+    background-color: red;
+}
+
+.debug .col-2 {
     background-color: red;
 }
 
